Bug 90408 - modem not disconnecting when deleting the bearer
Summary: modem not disconnecting when deleting the bearer
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: 1.4
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
: 89512 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-12 06:24 UTC by Torsten Hilbrich
Modified: 2015-12-03 12:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Log file of modem manager (slightly anonymized) (130.50 KB, text/plain)
2015-05-12 06:24 UTC, Torsten Hilbrich
Details

Description Torsten Hilbrich 2015-05-12 06:24:12 UTC
Created attachment 115706 [details]
Log file of modem manager (slightly anonymized)

When testing the version 1.4.6 of modem manager I had one occurrence of the problem that the modem was not disconnected when a connecting bearer was deleted from a D-Bus client.

Here is an excerpt from the modem manager logs (also attached):

<debug> [1428916367.541269] New MBM bearer created at DBus path '/org/freedesktop/ModemManager1/Bearer/7'
<debug> [1428916367.543275] Connecting bearer '/org/freedesktop/ModemManager1/Bearer/7'
<info>  [1428916367.543292] Modem /org/freedesktop/ModemManager1/Modem/0: state changed (registered -> connecting)
...
<debug> [1428916372.035067] (wwan0): port now connected
<debug> [1428916372.035073] Connected bearer '/org/freedesktop/ModemManager1/Bearer/7'
<info>  [1428916372.035137] Modem /org/freedesktop/ModemManager1/Modem/0: state changed (connecting -> connected)
<debug> [1428916372.035331] (wwan0): port now disconnected
<debug> [1428916372.035337] Removing from DBus bearer at '/org/freedesktop/ModemManager1/Bearer/7'

However, the modem never leaves the connected state.

In the D-Bus the following changes were visible:

- DeleteBearer was called
- Bearer has changed, deletion of Bearer/7 confirmed
- Modem still in STATE_CONNECTING

Before DeleteBearer no explicit Disconnect was issued on the Bearer interface because the bearer was still in the connecting phase.

Versions:

modemmanager: 1.4.6
libmbim: 1.12.2
libqmi: 1.12.4

Hardware:

Lenovo T440p
Modem Lenovo N5321 gw (idVendor=8087, idProduct=07dc)

Kernel: 3.18.9 with Grsecurity Patch
Comment 1 Aleksander Morgado 2015-12-03 11:10:06 UTC
Fixed this in git master and mm-1-4 now, bearer will get disconnected explicitly before it gets removed.

http://cgit.freedesktop.org/ModemManager/ModemManager/commit/?id=4c036eb8f96cae06da1f968fb9eb48f6faa12796
Comment 2 Aleksander Morgado 2015-12-03 11:23:56 UTC
*** Bug 89512 has been marked as a duplicate of this bug. ***
Comment 3 Torsten Hilbrich 2015-12-03 11:53:10 UTC
I could not find this commit on mm-1-4 yet. Did you forget to push it?
Comment 4 Aleksander Morgado 2015-12-03 12:06:07 UTC
Yes, I forgot :) Should be there now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.