iface-modem: explicitly disconnect bearer before removing it

https://bugs.freedesktop.org/show_bug.cgi?id=90408