src/mm-bearer-list.h
@@ -74,6 +74,8 @@ void mm_bearer_list_foreach (MMBearerList *self,
 
 MMBaseBearer *mm_bearer_list_find_by_properties (MMBearerList *self,
                                                  MMBearerProperties *properties);
+MMBaseBearer *mm_bearer_list_find_by_path (MMBearerList *self,
+                                           const gchar *path);
 
 void     mm_bearer_list_disconnect_all_bearers        (MMBearerList *self,
                                                        GAsyncReadyCallback callback,
